# Master_Thesis

./: .gitignore  LICENSE  README.md  environment.yml  generate_data.py  hyperparamer_tuning.py  pyproject.toml  run.py  test_hyperparemeter_tuning.ipynb
src/: generate_data.py  options.py  reinforce_baselines.py  run.py  simple_tsp.ipynb  train.py
src/agents/: __init__.py  agent.py  eval.py  train.py  tsp_agent.py
src/graph/: __init__.py  evrp_graph.py  evrp_network.py  plot_timeline.py  tsp_graph.py  tsp_network.py
src/instances/: example.json  example2.json  example3.json  example_graph_5.json  example_graph_5_b.json  example_graph_5_swapping.json  paper_5_nodes_swapping.json
src/model/: args.json
src/model/computational_data/: avg_train_cost.csv  avg_train_length.csv  avg_train_penalty.csv  avg_train_reward.csv  avg_val_cost.csv  avg_val_length.csv  avg_val_penalty.csv  avg_val_reward.csv
src/nets/: __init__.py  attention_evrp_model.py  attention_model.py  attention_tsp_model.py  attention_vrp_model.py  graph_decoder.py  graph_encoder.py  reinforce_baselines.py
src/notebooks/: MVP_RL.ipynb  basic_algorithm.ipynb  computational_analysis.ipynb  example_evrp.ipynb  graph.ipynb  plot_vrp.ipynb  plt_evrp.ipynb  simple_tsp.ipynb
src/notebooks/.ipynb_checkpoints/: computational_analysis-checkpoint.ipynb
src/problems/: __init__.py
src/problems/evrp/: state_evrp.py  (+3 more)
src/reinforce/: test.py
src/tests/: sample.py
src/utils/: beam_search.py  data_utils.py  functions.py  hyperparameter_config.py  load_json.py  log_utils.py  plot_timeline.py  truck_naming.py
(+7 files in other folders)
