[tool.poetry]
name = "master-thesis-2023-reinforcement-learning-in-grids"
version = "0.1.0"
description = ""
authors = ["Claire Fragkedaki <kleio.fragkedaki@einride.tech>"]

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^22.2.0"
exceptiongroup = "^1.1.0"
iniconfig = "^2.0.0"
packaging = "^23.0"
pluggy = "^1.0.0"
pytest = "^7.2.1"
tomli = "^2.0.1"
flake8 = "^6.0.0"
black = "^22.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
